# dicek

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  version.hpp.in
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  macos.yml  pre-commit.yml  ubuntu-20.04.yml  ubuntu-latest.yml  ubuntu.yml  windows-latest.yml  windows.yml
include/: Vector.hpp
include/dicek/: Vector.hpp  scalar_traits.hpp  scalar_type.hpp  vector.hpp  vector_base.hpp
include/dicek/deprecated/: vector_base.hpp
include/dicek/deprecated/linalg/: vector.hpp
include/dicek/linalg/: vector.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  VectorTest.hpp  scalar_traitsTest.cpp  scalar_traitsTest.hpp  scalar_typeTest.hpp  vector2cTest.hpp  vector3dTest.hpp  vectorIteratorTest.cpp  vectorTest.cpp
test/deprecated/: vector2cTest.hpp  vector3dTest.hpp
